compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_label.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1529
expression: "type X { X(a: Int, b: Float) }\nfn x() {\n  let x = X(a: 1, c: 2.0)\n  x\n}"
snapshot_kind: text
---
----- SOURCE CODE
type X { X(a: Int, b: Float) }
fn x() {
  let x = X(a: 1, c: 2.0)
  x
}

----- ERROR
error: Unknown label
  ┌─ /src/one/two.gleam:3:19
  │
3 │   let x = X(a: 1, c: 2.0)
  │                   ^^^^^^ Did you mean `b`?

It accepts these labels:

    b
